docs/1.0/getting-help.md
# Getting help

If you run into an issue with Flipside, there are a couple ways you can get help:

1. Email [support@flipsidexr.com](mailto:support@flipsidexr.com) with your question and someone will get back to you, usually during business hours.
2. Post your question to our [Discord chat](https://discord.gg/q3n9ppA) for the community to help. We're on here often, and often others may be able to help too.

Here are some things that can help us solve your issues faster:

### Flipside Studio issues

> Note: Bug reporter is currently only available in the [Flipside Beta Branch](https://www.flipsidexr.com/beta-signup).

If you experience a bug in Flipside Studio, take your headset off and click on the Settings icon on the desktop camera switcher. From there, click on the Support tab and you'll see a form where you can report the issue to us. You can add details about what went wrong, and the form will automatically include key info about your system to help us figure out what went wrong.

:gif /files/docs/gifs/update-23_support.mp4

### Reporting crashes

If you're experiencing an application crash, or an issue that's blocking you from using Flipside, here are the steps to find your output log, which can give us more info about the problem.

1\. In Windows Explorer, make sure _View > Hidden items_ is checked.

![Windows Explorer show hidden items](https://www.flipsidexr.com/files/docs/screenshots/windows-explorer-show-hidden-files.png)

2\. Now browse to `AppData/LocalLow/Flipside XR/Flipside Studio` under your home directory and you should see an `output_log.txt` file.

![Flipside output log file](https://www.flipsidexr.com/files/docs/screenshots/flipside-output-log-location.png)

### Flipside Creator Tools issues

If you're using the [Flipside Creator Tools](/docs/1.0/creator-tools), you can send us the bundle file of your character or set that's not working.

You can also export your Flipside Creator Tools project for us to help see what's going on by going to _Assets > Export Package..._ in Unity's top-level menu.

If the files are too big to send via email or Discord, try sending them through a service like [wetransfer.com](https://wetransfer.com/).
