docs/2023.1/getting-help.md
# Getting help

If you run into an issue with Flipside, there are a couple ways you can get help:

1. Email [support@flipsidexr.com](mailto:support@flipsidexr.com) with your question and someone will get back to you, usually during business hours.
2. Post your question to our [Discord community](https://discord.gg/q3n9ppA).

Here are some things that can help us solve your issues faster:

### Flipside Studio issues

If you experience a bug in Flipside Studio, press A or X to open the main menu and choose Help in the top right corner to open the help menu.

From there, click on the **Report a Problem** button in the bottom right corner of the help menu. You'll be asked to describe the problem out loud, which will be sent to our support team along with key info about your system and the state of the software to helps figure out what went wrong.

If you're using Flipside Studio on the PC, you can also take your headset off and click on the Settings icon on the desktop camera switcher. From there, click on the Support tab and you'll see a form where you can report the issue to us.

:gif https://www.flipsidexr.com/files/docs/gifs/update-23_support.mp4

### Reporting crashes

If you're experiencing an application crash, or an issue that's blocking you from using Flipside, here are the steps to find your output log, which can give us more info about the problem.

1\. In Windows Explorer, make sure _View > Hidden items_ is checked.

![Windows Explorer show hidden items](https://www.flipsidexr.com/files/docs/screenshots/windows-explorer-show-hidden-files.png)

2\. For Flipside Studio, browse to `AppData/LocalLow/Flipside XR/Flipside Studio` under your home directory. For Flipside Broadcaster, browse to `AppData/LocalLow/Flipside XR/Flipside Broadcaster` instead.

![Flipside output log file](https://www.flipsidexr.com/files/docs/screenshots/flipside-output-log-location.png)

3\. The file `Player.log` in this folder is the output log from your last time using the app. Please include this file with your support request, along with your general system information (Windows version, CPU, GPU, RAM, remaining storage space).

### Flipside Creator Tools issues

If you're using the [Flipside Creator Tools](/docs/2023.1/creator-tools), you can send us the bundle file of your character or set that's not working.

You can also export your Flipside Creator Tools project for us to help see what's going on by going to _Assets > Export Package..._ in Unity's top-level menu.

If the files are too big to send via email or Discord, try sending them through a service like [wetransfer.com](https://wetransfer.com/).
